# dz_oop_06

./: README.md  main.py  pyproject.toml
app/: config.py  logging_config_service.py  utils.py
app/api/: __init__.py  api.py
app/shemas/: client_interest_request.py  online_score_request.py  score.py
tests/: test_routers.py
tests/test_schemas/: test_shemas.py
