[tool.poetry]
name = "dz-oop-06"
version = "0.1.0"
description = "dz otus oop_06"
authors = ["Artem Makushkin <artem555525fssg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
